keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak-ns
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  type: LoadBalancer
  ports:
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
