keycloak/keycloak-ingress-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: keycloak-ingress-https
  namespace: keycloak-ns
  labels:
    app: keycloak-nginx
    layer: edge
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`keycloak.kube.local`)
      services:
        - name: keycloak-nginx-service
          port: 8443
  tls:
    passthrough: true
